# OpenGLTemplate

./: .gitignore  CMakeLists.txt  Game.cpp  pch.h
src/: audio.cpp  audio.h  audiomanager.cpp  audiomanager.h  camera.cpp  camera.h  cubemap.cpp  cubemap.h  freetypefont.cpp  freetypefont.h  game.cpp  game.h  image.cpp  image.h  input.cpp  input.h  matrixstack.cpp  matrixstack.h  openal.h  openassetimportmesh.cpp  openassetimportmesh.h  plane.cpp  plane.h  shaders.cpp  shaders.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  texture.cpp  texture.h  vertexbufferobject.cpp  vertexbufferobject.h  vertexbufferobjectindexed.cpp  vertexbufferobjectindexed.h  window.cpp  window.h
